--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Cropland Organics</title>
-</head>
+    <head>
+        <title>Cropland Organics</title>
+    </head>
+    <style>
+        body{
+            text-align: center;
+            background-color: #47ad47;;
+        }
+
+        h3 {
+    color: white;
+    font-size: larger;
+    font-family: cursive;
+}
+h1 {
+    font-family: sans-serif;
+}
+    </style>
 <body>
-
-	Soon we will be there
-
+    <h1>CROPLAND ORGANICS</h1>
+    <h3> Deals in Organic Vermicompost, Soil Testing , Plants and Garden Maintaince.</h3>
+    
+   <h2> Welcome to our website! We're currently working hard to bring you an amazing online experience.</h2>
+<h2>Stay tuned, we'll be launching soon!</h2>
+<h2>Exciting things are on the way! We can't wait to share them with you.</h2>
+<h2>Thank you for your patience. We're just a few steps away from unveiling our brand new website.</h2>
+<img src="logo.png" height="400px">
 </body>
 </html>
