--- a/index.html
+++ b/index.html
@@ -6,26 +6,38 @@
     <style>
         body{
             text-align: center;
-            background-color: #47ad47;;
+background-size: cover;
+          	background-repeat: no-repeat; 
+ background-image: url("backkk.jpg");
+   color: black;
         }
 
-        h3 {
+h3 {
     color: white;
-            font-size: 30px;
-    font-family: cursive;
+    font-size: larger;
+    background-color: black;
+    font-family: sans-serif;
+    padding: 10px;
 }
 h1 {
-    font-family: sans-serif;
+    font-family: fantasy;
+    letter-spacing: 0.1em;
+}
+h2 {
+    font-family: system-ui;
+    color: #762222;
 }
     </style>
 <body>
     <h1>CROPLAND ORGANICS</h1>
     <h3> Deals in Organic Vermicompost, Soil Testing , Plants and Garden Maintaince.</h3>
     
-   <h2> Welcome to our website! We're currently working hard to bring you an amazing online experience.</h2>
-<h2>Stay tuned, we'll be launching soon!</h2>
-<h2>Exciting things are on the way! We can't wait to share them with you.</h2>
-<h2>Thank you for your patience. We're just a few steps away from unveiling our brand new website.</h2>
-<img src="logo.png" height="400px">
+    <ul>
+  <li> <h2> Welcome to our website! We're currently working hard to bring you an amazing online experience.</h2></li>
+<li><h2>Stay tuned, we'll be launching soon!</h2></li>
+<li><h2>Exciting things are on the way! We can't wait to share them with you.</h2></li>
+<li><h2>Thank you for your patience. We're just a few steps away from unveiling our brand new website.</h2></li>
+</ul>
+<!-- <img src="logo.png" height="400px"> -->
 </body>
 </html>
