--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"> <a href="#"><img src="logoco.png" height="40px"></a>&nbsp;<a href="#">Cropland Organics</a></div>
+            <div class="logo"> <a href="#"><img src="#"></a>&nbsp;<a href="#">Cropland Organics</a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#" class="menu-btn">Products</a></li>
