--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
      <link rel = "icon" href = 
-"ra1.png" sizes="32x32"
+"logo.png" sizes="32x32"
         type = "image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
