--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!-- manali leh manali --> 
                   <div class="card">
                     <div class="box">
-  <img src="Leh Manali/790412c22c2edb455f84d80a53806715.jpg">
+  <img src="img1.jpeg">
 <!--  <div class="but"><a href="manali_leh_manali.html" target="_blank"> Book Now </a></div>
                         <div class="text">Leh Ladakh(manali-leh-manali)</div>
                            <p> Duration :9N-10D<br>
@@ -72,7 +72,7 @@ Delhi</p> -->
                     <div class="card">
                     <div class="box">
                    <div class="column left">
-                  <img src="Spiti road\IMG_5414.jpg">
+                  <img src="img1.jpeg">
 <!--  <div class="but"><a href="spiti_valley_summer.html" target="_blank"> Book Now </a></div>
                 </div>
 
