--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="row">
             <div class="home-content">
   <div class="text-1"> </div>
-                 <div class="text-2">Feel the organic </div>
+                 <div class="text-2">Dedicated to being natural</div>
                 <div class="text-3"><span class="typing"></span></div>
 <a href = "#">Explore More</a>
             </div>
@@ -220,14 +220,14 @@ $(document).ready(function(){
     // typing text animation script
 
     var typed = new Typed(".typing", {
-        strings: ["Vermicompost", "Soaps", "Many More"],
+        strings: ["Vermicompost", "Vermiwash", "Many More"],
         typeSpeed: 100,
         backSpeed: 50,
         loop: true
     });
 
     var typed = new Typed(".typing-2", {
-        strings: ["Connect people", "Create Memories", "Give Best Plans"],
+        strings: ["Connect people", "Create Memories", "Give Best Products"],
         typeSpeed: 150,
         backSpeed: 80,
         loop: true
